# robotics_brewbuddy

./: .gitignore  README.md  conversation_generation.py  requirements.txt  speech_to_text.py
computer_vision/: detect_people.py
install/: local_setup.sh  setup.sh
log/: latest_build
ros_project/: CMakeLists.txt  main.py  package.xml
ros_project/examples/: joystick_control_example.py
ros_project/launch/: joystick_control.launch.py  navigation.launch.py  navigation_with_people_detection.launch.py  slam_toolbox.launch.py
ros_project/src/: audio_processing.py  joystick_control.py  llm_client.py  main.py  navigation.py  sentiment_analysis.py
src/: text_to_speech.py
