<?xml version="1.0"?>
<package format="2">
  <name>robotics_brewbuddy</name>
  <version>0.0.0</version>
  <description>The robotics_brewbuddy package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>joy</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>speech_recognition</depend>
  <depend>textblob</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
